<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/biru_langit"
    android:padding="@dimen/padding_linear_layout_terluar">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_welcome_logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top_100"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        android:shadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginTop="@dimen/margin_top_50"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        android:shadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="@dimen/ukuran_margin_dari_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/bg_button_white_border"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginVertical="@dimen/ukuran_margin_dari_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_with_facebook"
        android:background="@drawable/bg_button_white_border"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_welcome_fb_login"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/ukuran_margin_dari_button">
        <TextView
            android:id="@+id/does_not_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/does_not_have_account"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_toRightOf="@id/does_not_have"
            android:layout_marginLeft="@dimen/ukuran_margin_left_register"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="openRegisterActivity"/>


    </RelativeLayout>

</LinearLayout>