<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyActivity"
    android:orientation="vertical"
    android:background="@color/biru_langit"
    android:padding="@dimen/padding_linear_layout_terluar"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingBottom="48dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/ukuran_almost_there"
                android:text="@string/verify_your_account"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/we_have_send_verif"
                android:textAlignment="center"
                android:layout_marginBottom="36dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_verification_code_here"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:gravity="center"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_white_border"
                android:layout_marginVertical="@dimen/ukuran_margin_dari_button"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/does_not_have"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/does_not_get_the_code"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend"
                    android:layout_toRightOf="@id/does_not_have"
                    android:layout_marginLeft="@dimen/ukuran_margin_left_register"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
